fix leading and spacing on lists in user-content

--- a/assets/scss/components/_user-content.scss
+++ b/assets/scss/components/_user-content.scss
@@ -4,10 +4,8 @@
   }
   ol,
   ul {
-    padding-left: 2em;
-    li {
-      margin-bottom: grid(3);
-    }
+    padding: 0;
+    margin: 0 0 grid(4) 2em;
   }
   a:not(.arrow):not(.button) {
     text-decoration: none;
